2007-11-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* INSTALL, Makefile.in, aclocal.m4, config.guess, config.sub,
	configure.ac, configure, depcomp, install-sh, ltmain.sh, missing:
	Removed.

2007-11-01  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* src/config.h, src/config.cpp (Config::load): Added new method
	for std::istream&.

 ChangeLog for RudeConfig C++ Library

 Copyright (C) 2005, 2007 Matthew Flood
 See file AUTHORS for contact information

 This file is part of RudeConfig.

 RudeConfig is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation; either version 2, or (at your option)
 any later version.
 
 RudeConfig is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with RudeConfig; (see COPYING) if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 02111-1307, USA.

* Thu Feb 01 2007 Matt Flood <matt@rudeserver.com>
- 5.0.5-1
- Renamed header include guards in config.h
	- From INCLUDED_CONFIG_H to INCLUDED_RUDE_CONFIG_H

* Thu Feb 01 2007 Matt Flood <matt@rudeserver.com>
- 5.0.4-3
- Minor amendments to build-related scripts
	- Added missing include directory to specfile

* Thu Feb 01 2007 Matt Flood <matt@rudeserver.com>
- 5.0.4-2
- Minor amendments to build-related scripts
	- Fixed minor typo in changelog (ChangeLog and rudeconfig.spec)
	- Added --disable-static to configure directive in rudeconfig.spec

* Fri Jan 19 2007 Matt Flood <matt@rudeserver.com>
- 5.0.4-1
- Created MAN page (rudeconfig.3)

* Mon Jul 31 2006 Matt Flood <matt@rudeserver.com>
-  5.0.3-1
- Minor changes to facilitate Windows builds 
		* changed #include's of  <cstring> to <string.h>