@@ -1,3 +1,8 @@
+2007-11-07  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* ParserJuly2004.cpp: Use int instead of char to handle parsed
+	characters, so that we can distinguish between code 255 and EOF.
+
 2007-11-06  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* INSTALL, Makefile.in, aclocal.m4, config.guess, config.sub,
